# wheel

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DATA_SOURCES.md
src/wheel_backtest/: __init__.py  cli.py  config.py
src/wheel_backtest/analytics/: __init__.py  benchmark.py  equity.py  metrics.py
src/wheel_backtest/data/: __init__.py  cache.py  philippdubach.py  provider.py  yfinance_provider.py
src/wheel_backtest/engine/: __init__.py  backtest.py  options.py  portfolio.py  wheel.py
src/wheel_backtest/reports/: __init__.py  charts.py
src/wheel_backtest/storage/: __init__.py  history.py
src/wheel_backtest/ui/: README.md  __init__.py  app.py  utils.py
src/wheel_backtest/ui/components/: __init__.py  results.py
src/wheel_backtest/ui/pages/: 1_🚀_Run_Backtest.py  2_📊_History.py  3_🔍_Analysis.py  4_📈_Benchmark.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_provider.py
tests/unit/: test_backtest.py  test_benchmark.py  test_cache.py  test_charts.py  test_cli.py  test_config.py  test_delta_selection.py  test_equity.py  test_history.py  test_metrics.py  test_options.py  test_portfolio.py  test_providers.py  test_wheel.py
